--- a/config/database.yml
+++ b/config/database.yml
@@ -1,7 +1,1 @@
-development:
-  adapter: mysql2
-  encoding: utf8
-  database: ranna_sanchaya
-  pool: 5
-  username: rannasanchaya
-  password: Qazplm123!@# 
+/home/janna/rails_apps/concord/shared/config/database.yml
